<package format="2">
  <name>tf2_ros</name>
  <version>0.5.12</version>
  <description>
    This package contains the ROS bindings for the tf2 library, for both Python and C++. 
  </description>
  <author>Eitan Marder-Eppstein</author>
  <author>Wim Meeussen</author>
  <maintainer email="tfoote@osrfoundation.org">Tully Foote</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/tf2_ros</url>
    
  <buildtool_depend>ament_cmake</buildtool_depend>

  
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>


  <!-- TODO(tfoote) dependencies from unported sections restore when ported
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend> -->
  <!-- <build_depend version_gte="1.11.1">message_filters</build_depend> -->
  <!-- <build_depend>rosgraph</build_depend> -->
  <!-- <build_depend>rospy</build_depend> -->
  <!-- <build_depend>tf2_py</build_depend> -->
  <!-- <run_depend>message_filters</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf2_py</run_depend>-->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
